--- a/teplota_vlhkost/components/MJ_HDC1080/CMakeLists.txt
+++ b/teplota_vlhkost/components/MJ_HDC1080/CMakeLists.txt
@@ -1,6 +1,6 @@
 
-idf_component_register(SRCS "main.c")
-#                    INCLUDE_DIRS "."
+idf_component_register(SRCS "main.c hdc1080.c")
+                    INCLUDE_DIRS "."
 
                     
                     
